Tue, 29 Apr 2008 21:03:53 -0600  Sean Reifschneider  <jafo@tummy.com>

   * Version 1.41

   * Patch from Jehiah Czebotar to catch an additional server disconnect
     situation.

Tue, 18 Sep 2007 20:52:09 -0600  Sean Reifschneider  <jafo@tummy.com>

   * Version 1.40

   * Updated setup.py file that uses distutils provided by Kai Lautaportti.

   * Prevent keys from containing ASCII character 127 as well, patch provided
     by Philip Neustrom.

   * Added ability to overload the persistent_load/id, patch provided by
     Steve Schwarz.

   * Fixed ability to pass (server_hash,key) in place of key in Client.set()
     Reported by Alexander Klyuev.

Tue, 14 Aug 2007 14:43:27 -0600  Sean Reifschneider  <jafo@tummy.com>

   * Version 1.39

   * Michael Krause reports the previous version doesn't work for
     _val_to_store_info() calls because it's defined as a staticmethod.
     Removing staticmethod decorator.  Also confirmed by Kai Lautaportti,
     with suggested fix of removing staticmethod.

Fri, 10 Aug 2007 17:50:13 -0600  Sean Reifschneider  <jafo@tummy.com>

   * Version 1.38

   * Matt McClanahan submitted a patch that allow add() to have a
     min_compress_len argument.

   * Steve Schwarz submitted a patch allowing user-defined picklers.

   * Michael Krause suggested checking the return value to prevent an
     exception from being raised in _set() when a value is too large to be
     stored.

Fri, 27 Jul 2007 01:55:48 -0600  Sean Reifschneider  <jafo@tummy.com>

   * Version 1.37

   * Fixing call from add() to _set() with parameter for min_compress_len.
     Reported by Jeff Fisher.

Thu, 07 Jun 2007 04:10:31 -0600  Sean Reifschneider  <jafo@tummy.com>

   * Version 1.36

   * Patch by Dave St.Germain to make the Client() class sub-class
     threadlocal to help with multi-threading issues.  Only available in
     Python 2.4 and above.

   * Patch by James Robinson with:
      1) new set_multi method.